[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-image-gen"
version = "0.1.1"
description = "Generate images from Python through Codex's Responses API bridge."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Small Turtle 2" },
]
keywords = ["codex", "openai", "responses", "image-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/smturtle2/codex-image-gen"
Issues = "https://github.com/smturtle2/codex-image-gen/issues"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codex_image_gen"]

[tool.hatch.build.targets.sdist]
exclude = ["/codex-image-gen-readme-showcase.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
